fixed padding of new nav to align with content

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -32,6 +32,7 @@
     
     .nav-links {
         clear: both;
+        padding: 0 60px 0 60px;
     }
 
     &:hover .nav-links {
